Update from https://github.com/dominikzorgnotti/transform-vmware-product-builds-to-json/commit/ef8bc8372b940be91dcc529b26cc70a2a7fc3266

--- a/table/kb2143838_vmware_vcenter_server_appliance_table0_release_as-table.json
+++ b/table/kb2143838_vmware_vcenter_server_appliance_table0_release_as-table.json
@@ -6,20 +6,32 @@
                 "type":"integer"
             },
             {
-                "name":"vCenter Server 7.0 update 1d\u00a0(7.0.1.00300)",
+                "name":"Version - Release Date",
                 "type":"string"
             },
             {
-                "name":"2021-02-02",
+                "name":"Release Date",
                 "type":"string"
             },
             {
-                "name":17491101,
+                "name":"VAMI\/Release Notes",
                 "type":"integer"
             },
             {
-                "name":17491160,
+                "name":"Client\/MOB\/vpxd.log",
                 "type":"integer"
+            },
+            {
+                "name":"Build Number",
+                "type":"integer"
+            },
+            {
+                "name":"Version",
+                "type":"string"
+            },
+            {
+                "name":"Release Name",
+                "type":"string"
             }
         ],
         "primaryKey":[
@@ -29,60 +41,94 @@
     },
     "data":[
         {
+            "index":0,
+            "Version - Release Date":"vCenter Server 7.0 update 1d\u00a0(7.0.1.00300)",
+            "Release Date":"2021-02-02",
+            "VAMI\/Release Notes":17491101,
+            "Client\/MOB\/vpxd.log":17491160,
+            "Build Number":17491160,
+            "Version":"vCenter Server 7.0 update 1d\u00a0",
+            "Release Name":"7.0.1.00300"
+        },
+        {
             "index":1,
-            "vCenter Server 7.0 update 1d\u00a0(7.0.1.00300)":"vCenter Server 7.0 update 1c\u00a0(7.0.1.00200)",
-            "2021-02-02":"2020-12-17",
-            "17491101":17327517,
-            "17491160":17327586
+            "Version - Release Date":"vCenter Server 7.0 update 1c\u00a0(7.0.1.00200)",
+            "Release Date":"2020-12-17",
+            "VAMI\/Release Notes":17327517,
+            "Client\/MOB\/vpxd.log":17327586,
+            "Build Number":17327586,
+            "Version":"vCenter Server 7.0 update 1c\u00a0",
+            "Release Name":"7.0.1.00200"
         },
         {
             "index":2,
-            "vCenter Server 7.0 update 1d\u00a0(7.0.1.00300)":"vCenter Server 7.0 update 1a\u00a0(7.0.1.00100)",
-            "2021-02-02":"2020-10-22",
-            "17491101":17004997,
-            "17491160":17005016
+            "Version - Release Date":"vCenter Server 7.0 update 1a\u00a0(7.0.1.00100)",
+            "Release Date":"2020-10-22",
+            "VAMI\/Release Notes":17004997,
+            "Client\/MOB\/vpxd.log":17005016,
+            "Build Number":17005016,
+            "Version":"vCenter Server 7.0 update 1a\u00a0",
+            "Release Name":"7.0.1.00100"
         },
         {
             "index":3,
-            "vCenter Server 7.0 update 1d\u00a0(7.0.1.00300)":"vCenter Server 7.0 Update 1\u00a0(7.0.1.00000)",
-            "2021-02-02":"2020-10-06",
-            "17491101":16860138,
-            "17491160":16858589
+            "Version - Release Date":"vCenter Server 7.0 Update 1\u00a0(7.0.1.00000)",
+            "Release Date":"2020-10-06",
+            "VAMI\/Release Notes":16860138,
+            "Client\/MOB\/vpxd.log":16858589,
+            "Build Number":16858589,
+            "Version":"vCenter Server 7.0 Update 1\u00a0",
+            "Release Name":"7.0.1.00000"
         },
         {
             "index":4,
-            "vCenter Server 7.0 update 1d\u00a0(7.0.1.00300)":"vCenter Server 7.0.0d\u00a0(7.0.0.10700)",
-            "2021-02-02":"2020-08-25",
-            "17491101":16749653,
-            "17491160":16749670
+            "Version - Release Date":"vCenter Server 7.0.0d\u00a0(7.0.0.10700)",
+            "Release Date":"2020-08-25",
+            "VAMI\/Release Notes":16749653,
+            "Client\/MOB\/vpxd.log":16749670,
+            "Build Number":16749670,
+            "Version":"vCenter Server 7.0.0d\u00a0",
+            "Release Name":"7.0.0.10700"
         },
         {
             "index":5,
-            "vCenter Server 7.0 update 1d\u00a0(7.0.1.00300)":"vCenter Server 7.0.0c\u00a0(7.0.0.10600)",
-            "2021-02-02":"2020-07-30",
-            "17491101":16620007,
-            "17491160":16620013
+            "Version - Release Date":"vCenter Server 7.0.0c\u00a0(7.0.0.10600)",
+            "Release Date":"2020-07-30",
+            "VAMI\/Release Notes":16620007,
+            "Client\/MOB\/vpxd.log":16620013,
+            "Build Number":16620013,
+            "Version":"vCenter Server 7.0.0c\u00a0",
+            "Release Name":"7.0.0.10600"
         },
         {
             "index":6,
-            "vCenter Server 7.0 update 1d\u00a0(7.0.1.00300)":"vCenter Server 7.0.0b\u00a0(7.0.0.10400)",
-            "2021-02-02":"2020-06-23",
-            "17491101":16386292,
-            "17491160":16386335
+            "Version - Release Date":"vCenter Server 7.0.0b\u00a0(7.0.0.10400)",
+            "Release Date":"2020-06-23",
+            "VAMI\/Release Notes":16386292,
+            "Client\/MOB\/vpxd.log":16386335,
+            "Build Number":16386335,
+            "Version":"vCenter Server 7.0.0b\u00a0",
+            "Release Name":"7.0.0.10400"
         },
         {
             "index":7,
-            "vCenter Server 7.0 update 1d\u00a0(7.0.1.00300)":"vCenter Server 7.0.0a\u00a0(7.0.0.10300)",
-            "2021-02-02":"2020-05-19",
-            "17491101":16189094,
-            "17491160":16189207
+            "Version - Release Date":"vCenter Server 7.0.0a\u00a0(7.0.0.10300)",
+            "Release Date":"2020-05-19",
+            "VAMI\/Release Notes":16189094,
+            "Client\/MOB\/vpxd.log":16189207,
+            "Build Number":16189207,
+            "Version":"vCenter Server 7.0.0a\u00a0",
+            "Release Name":"7.0.0.10300"
         },
         {
             "index":8,
-            "vCenter Server 7.0 update 1d\u00a0(7.0.1.00300)":"vCenter Server 7.0 GA\u00a0(7.0.0.10100)",
-            "2021-02-02":"2020-04-02",
-            "17491101":15952498,
-            "17491160":15952599
+            "Version - Release Date":"vCenter Server 7.0 GA\u00a0(7.0.0.10100)",
+            "Release Date":"2020-04-02",
+            "VAMI\/Release Notes":15952498,
+            "Client\/MOB\/vpxd.log":15952599,
+            "Build Number":15952599,
+            "Version":"vCenter Server 7.0 GA\u00a0",
+            "Release Name":"7.0.0.10100"
         }
     ]
 }
